connect go article crud with python vector embedding, add tests
